# icu4x

./: Cargo.toml
components/bytes-trie/: Cargo.toml
components/bytes-trie/src/: bytes_trie.rs  bytes_trie_builder.rs  lib.rs
components/bytes-trie/src/builder/: branch_head_node.rs  branch_node.rs  builder.rs  dynamic_branch_node.rs  errors.rs  final_value_node.rs  intermediate_value_node.rs  linear_match_node.rs  list_branch_node.rs  mod.rs  node.rs  split_branch_node.rs  util.rs  value_node.rs
components/bytes-trie/src/trie/: bytes_trie.rs  encoding.rs  mod.rs
components/bytes-trie/tests/: bytes_trie_test.rs
components/locale/: Cargo.toml
components/locale-matcher/: Cargo.toml
components/locale-matcher/src/: bytes_trie.rs  lib.rs  lsr.rs  priority_list.rs
components/locale-matcher/tests/: priority_list.rs
components/locale-matcher/tests/helpers/: locale_matcher_test_case.pest  mod.rs
components/locale/benches/: langid.rs  locale.rs
components/locale/src/: lib.rs  locale.rs
components/locale/src/extensions/: mod.rs
components/locale/src/extensions/private/: key.rs  mod.rs
components/locale/src/extensions/transform/: fields.rs  key.rs  mod.rs  value.rs
components/locale/src/extensions/unicode/: attribute.rs  attributes.rs  key.rs  keywords.rs  mod.rs  value.rs
components/locale/src/parser/: errors.rs
components/locale/src/subtags/: variants.rs
components/locale/tests/: locale.rs
components/locale/tests/fixtures/: mod.rs
