[package]
name = "icu-bytes-trie"
description = "Implementation of a Trie data structure for arbitrary byte strings"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
bitflags = "1.2.1"
thiserror = "1.0.20"

[dev-dependencies]
anyhow = "1.0.31"
criterion = "0.3"
pest = "2.1"
pest_derive = "2.1"
pretty_assertions = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [[bench]]
# name = "locale-matcher"
# harness = false
