[package]
name = "icu-bytes-trie"
description = "Implementation of a Trie data structure for arbitrary byte strings"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license-file = "../../LICENSE"
categories = ["internationalization"]
include = [
    "src/**/*",
    "test/**/*",
    "Cargo.toml",
]

[dependencies]
paste = "1.0.1"
thiserror = "1.0.20"

[dev-dependencies]
anyhow = "1.0.31"
assert_matches = "1.4.0"
criterion = "0.3"
pretty_assertions = "0.6.1"
