[package]
name = "icu-locale-matcher"
description = "API for selecting Unicode Locale Identifiers based on ordered preferences"
version = "0.0.1"
authors = ["The ICU4X Project Developers"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/unicode-org/icu4x"
license = "MIT/Apache-2.0"
categories = ["internationalization"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[dependencies]
bitflags = "1.2.1"
icu-locale = { version = "0.0.1", path = "../locale" }
linked-hash-map = "0.5.3"
ordered-float = "1.0.2"

[dev-dependencies]
anyhow = "1.0.31"
criterion = "0.3"
pest = "2.1"
pest_derive = "2.1"
pretty_assertions = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# [[bench]]
# name = "locale-matcher"
# harness = false
